# Movie-Recommendation-App

./: README.md  collaborative_mode.mli  content_based_mode.mli  dataframe.mli  demographic_mode.mli  dune  dune-project  input_ratings.txt  main.ml  movie.ml  movie.mli  pairvalueset.mli  preprocess.mli  rating.ml  rating.mli  similarpair.mli  simpledict.mli
_build/: .db  .digest-db  log
_build/default/: dune
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/52c49c7c6bc3dda051f54733e606b527/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/.ppx/57ef275c515ec1fe105f6ff0979f5a61/: dune__exe___ppx.cmo
_build/default/src/: content_based_mode.cma  content_based_mode.cmxa  content_based_mode.cmxs  content_based_mode.ml  data_preprocessing.cma  data_preprocessing.cmxa  data_preprocessing.cmxs  data_preprocessing.pp.ml  dune  main.pp.ml  movie.cma  movie.cmxa  movie.cmxs  rating.ml
_build/default/src/.content_based_mode.objs/byte/: content_based_mode.cmi  content_based_mode.cmo  content_based_mode.cmt
_build/default/src/.content_based_mode.objs/native/: content_based_mode.cmx
_build/default/src/.data_preprocessing.objs/byte/: data_preprocessing.cmi  data_preprocessing.cmo  data_preprocessing.cmt
_build/default/src/.data_preprocessing.objs/native/: data_preprocessing.cmx
_build/default/src/.main.eobjs/byte/: dune__exe__Main.cmi  dune__exe__Main.cmo  dune__exe__Main.cmt
_build/default/src/.main.eobjs/native/: dune__exe__Main.cmx
_build/default/src/.merlin-conf/: exe-main  lib-content_based_mode  lib-data_preprocessing  lib-movie
_build/default/src/.movie.objs/: movie.ml.d  rating.ml.d
_build/default/src/.movie.objs/byte/: movie.cmi  movie.cmo  movie.cmt  rating.cmi  rating.cmo  rating.cmt
_build/default/src/.movie.objs/native/: movie.cmx  rating.cmx
_build/default/tests/: tests.ml
_build/default/tests/.merlin-conf/: exe-tests
_build/default/tests/.tests.eobjs/byte/: dune__exe__Tests.cmi  dune__exe__Tests.cmo  dune__exe__Tests.cmt
_build/default/tests/.tests.eobjs/native/: dune__exe__Tests.cmx
dataset/: new_ratings.csv  ratings_small.csv:Zone.Identifier  tmdb_5000_credits.csv:Zone.Identifier  tmdb_5000_movies.csv:Zone.Identifier
preprocess data/: dune  main.ml
preprocess data/movie/: dune  movie.ml  movie.mli  rating.ml  rating.mli
src/: collaborative_mode.ml  content_based_mode.ml  data_preprocessing.ml  demographic_mode.ml  dune  main.ml  movie.ml  movie.mli  rating.ml  rating.mli  utils.ml
tests/: dune  mode1_tests.ml  tests.ml
