(rule
  (target movie_recommendation_app.zip)
  (deps 
    src/main.ml
    src/movie.mli
    src/movie.ml
    src/rating.mli
    src/rating.ml
    src/demographic_mode.ml
    src/data_preprocessing.ml
    src/content_based_mode.ml
    src/dune
    tests/tests.ml
    tests/dune
  )
  (action
    (run zip -R movie_recommendation_app.zip %{deps})))