(rule
  (target movie_recommendation_app.zip)
  (deps 
    src/main.ml
    src/movie.ml
    src/rating.ml
    src/data_preprocessing.ml
    src/demographic_mode.ml
    src/content_based_mode.ml
    src/collaborative_mode.ml
    src/utils.ml
    src/dune
    tests/tests.ml
    tests/dune
  )
  (action
    (run zip -R movie_recommendation_app.zip %{deps})))