(library
  (name movie)
  (modules movie rating)
  (wrapped false)
  (libraries core)
  (preprocess
    (pps ppx_deriving.show ppx_deriving.ord bisect_ppx)))

; (library
;   (name rating)
;   (modules rating)
;   (libraries core)
;   (preprocess
;     (pps ppx_deriving.show ppx_deriving.ord bisect_ppx)))

(library
  (name data_preprocessing)
  (modules data_preprocessing)
  (libraries csv yojson movie)
  (preprocess
    (pps ppx_deriving.show ppx_deriving.ord bisect_ppx))
)

(library
  (name content_based_mode)
  (modules content_based_mode)
  (libraries core sklearn movie)
  (preprocess 
    (pps bisect_ppx))
)
  
(library
  (name demographic_mode)
  (modules demographic_mode)
  (libraries owl))

(executable
  (name main)
  (modules main)
  (libraries
    core_unix.command_unix
    data_preprocessing
    content_based_mode)
  (preprocess (pps ppx_jane)))