(library
  (name movie)
  (modules movie)
  (libraries core)
  (preprocess
    (pps ppx_deriving.show ppx_deriving.ord bisect_ppx)))

(library
  (name rating)
  (modules rating)
  (preprocess
    (pps ppx_deriving.show ppx_deriving.ord bisect_ppx)))

(library
  (name utils)
  (modules utils)
  (libraries core movie rating)
  (preprocess 
    (pps bisect_ppx))
)

(library
  (name data_preprocessing)
  (modules data_preprocessing)
  (libraries csv yojson movie rating)
  (preprocess
    (pps bisect_ppx))
)
  
(library
  (name demographic_mode)
  (modules demographic_mode)
  (libraries core owl data_preprocessing)
  (preprocess 
    (pps bisect_ppx))
)

(library
  (name content_based_mode)
  (modules content_based_mode)
  (libraries core sklearn movie utils)
  (preprocess 
    (pps bisect_ppx))
)

(library
  (name collaborative_mode)
  (modules collaborative_mode)
  (libraries core movie rating utils)
  (preprocess 
    (pps bisect_ppx))
)

(executable
  (name main)
  (modules main)
  (libraries
    core
    core_unix
    core_unix.sys_unix
    movie
    rating
    utils
    data_preprocessing
    demographic_mode
    content_based_mode
    collaborative_mode
    inquire)
  (preprocess (pps ppx_jane)))
